<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:myapp="http://schemas.android.com/apk/res/com.bytemesoftware.nxtmessenger"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">    
 
    <com.admob.android.ads.AdView
		android:id="@+id/ad"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		myapp:backgroundColor="#000000"
		myapp:primaryTextColor="#FFFFFF"
		myapp:secondaryTextColor="#CCCCCC"
		/>

    <TextView
        android:id="@+id/label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       	android:layout_marginTop="45dip"
        android:text="@string/main_message"/>
    <EditText
        android:id="@+id/entry"
        android:inputType="textShortMessage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:layout_below="@id/label"/>
    <Button
        android:id="@+id/send"
        android:layout_width="100px"
        android:layout_height="40dip"
        android:layout_below="@id/entry"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dip"
        android:text="@string/send_button" />
    <Spinner
    	android:id="@+id/mailbox_select"
        android:layout_width="70dip"
        android:layout_height="40dip"
        android:layout_marginLeft="170dip"
        android:layout_below="@id/entry"
        android:prompt="@string/spinner_prompt"
    />
    <TextView
        android:id="@+id/mailbox_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dip"
        android:layout_marginTop="10dip"
       	android:layout_below="@id/entry"
        android:text="@string/mailbox"/>
    <TextView
        android:id="@+id/device_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/send"
       	android:layout_marginTop="5dip"
       	android:layout_marginLeft="10dip"
        android:text="@string/device_label"/>
    <TextView
        android:id="@+id/device_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/device_label"
       	android:layout_marginTop="5dip"
       	android:layout_marginLeft="10dip"
        android:text="@string/device_name"/>
    
</RelativeLayout>